template: Add relative link for copies
Signed-off-by: Philippe Coval <philippe.coval@huawei.com>
Change-Id: I49185e6542628d1104aa8f91cdc83145345b2372

--- a/docs/oniro-template/index.org
+++ b/docs/oniro-template/index.org
@@ -6,7 +6,7 @@
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND: https://oniroproject.org/images/shapes.png
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_OPACITY: 0.15
-#+REVEAL_EXTRA_CSS: local.css
+#+REVEAL_EXTRA_CSS: ../oniro-template/local.css
 #+REVEAL_HEAD_PREAMBLE: <meta name="description" content="Presentations slides">
 #+REVEAL_HLEVEL: 3
 #+REVEAL_INIT_OPTIONS: transition:'zoom'
@@ -17,6 +17,7 @@
 #+REVEAL_THEME: night
 #+REVEAL_PLUGINS: (highlight)
 #+MACRO: tags-on-export (eval (format "%s" (cond ((org-export-derived-backend-p org-export-current-backend 'md) "#+OPTIONS: tags:1") ((org-export-derived-backend-p org-export-current-backend 'reveal) "#+OPTIONS: tags:nil num:nil reveal_single_file:t"))))
+
 #+begin_export html
 <!--
 SPDX-License-Identifier: CC-BY-4.0
@@ -24,6 +25,7 @@ SPDX-License-URL: https://spdx.org/licenses/CC-BY-4.0.html
 SPDX-FileCopyrightText: Huawei Inc.
 -->
 #+end_export
+
 #+ATTR_HTML: :width 10% :align right
 https://docs.oniroproject.org/en/latest/_static/ONIRO.svg
 
