--- a/docs/iot-robot/index.org
+++ b/docs/iot-robot/index.org
@@ -1,5 +1,5 @@
 #+TITLE: Making an IoT robot...
-#+AUTHOR: Philippe Coval http://purl.org/rzr/ #FOSDEM 2020
+#+AUTHOR: Philippe Coval <purl.org/rzr> #FOSDEM 2020
 #+EMAIL: rzr@users.sf.net
 
 #+OPTIONS: num:nil, timestamp:nil, toc:nil
@@ -9,7 +9,7 @@
 #+REVEAL_HEAD_PREAMBLE: <meta name="description" content="Presentations slides">
 #+REVEAL_HLEVEL: 3
 #+REVEAL_INIT_OPTIONS: transition:'zoom'
-#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr/> </p>
+#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr> </p>
 #+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@4.1.0/
 #+REVEAL_SLIDE_FOOTER:
 #+REVEAL_SLIDE_HEADER:
@@ -238,7 +238,7 @@ $ curl -H "Content-Type: application/json" \
   @@html:<video controls src="https://video.fosdem.org/2020/UD2.218A/iotnuttx.webm" controls autoplay="false" loop="false" preload="none" />@@
 
 * More
-  - https://purl.org/rzr/
+  - https://purl.org/rzr
   - https://purl.org/rzr/presentations
   - https://purl.org/rzr/demo
   - https://purl.org/rzr/weboftwins
