--- a/docs/abandonware/index.org
+++ b/docs/abandonware/index.org
@@ -1,6 +1,6 @@
 #+TITLE: Abandon Ware
 #+EMAIL: rzr@users.sf.net
-#+AUTHOR: Philippe Coval http://purl.org/rzr/ #OpenFest2020 2020-11-08
+#+AUTHOR: Philippe Coval <purl.org/rzr> #OpenFest2020 2020-11-08
 
 #+OPTIONS: num:nil, timestamp:nil, toc:nil
 #+REVEAL_DEFAULT_FRAG_STYLE: appear
@@ -9,7 +9,7 @@
 #+REVEAL_HEAD_PREAMBLE: <meta name="description" content="Presentations slides">
 #+REVEAL_HLEVEL: 3
 #+REVEAL_INIT_OPTIONS: transition:'zoom'
-#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr/> </p>
+#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr> </p>
 #+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@4.1.0/
 #+REVEAL_SLIDE_FOOTER:
 #+REVEAL_SLIDE_HEADER:
@@ -29,7 +29,7 @@
   - OpenSource Contributor, [[https://wiki.mozilla.org/User:Rzr][Mozilla Rep]] (IoT)
   - Involved in industry's OSS:
     - Tizen (Intel), Yocto, IoTivity (Samsung)
-  - Contact: <https://purl.org/rzr/> 
+  - Contact: <https://purl.org/rzr>
     - Presentations, Videos, Social...
     - Currently *available for cooperation*
   - Link me from [[https://en.wikipedia.org/wiki/Fediverse][Fediverse]]: 
@@ -214,7 +214,7 @@
 
 * More
 
-  - https://purl.org/rzr/
+  - https://purl.org/rzr
   - https://purl.org/rzr/presentations
   - https://purl.org/rzr/demo
   - https://purl.org/rzr/weboftwins
@@ -232,7 +232,7 @@
 [[https://purl.org/rzr/video][📺]]
 
 * More
-  - https://purl.org/rzr/
+  - https://purl.org/rzr
   - https://purl.org/rzr/presentations
   - https://purl.org/rzr/demo
   - https://purl.org/rzr/weboftwins
