--- a/docs/nuttx/index.org
+++ b/docs/nuttx/index.org
@@ -1,5 +1,5 @@
 #+TITLE: NuttX RTOS
-#+AUTHOR: Philippe Coval https://purl.org/rzr/ #NuttX 2021
+#+AUTHOR: Philippe Coval <purl.org/rzr> #NuttX 2021
 #+EMAIL: rzr@users.sf.net
 
 #+OPTIONS: num:nil, timestamp:nil, toc:nil, tags:nil, tag:nil, ^:nil, reveal_title_slide:t, italic:nil
@@ -10,7 +10,7 @@
 #+REVEAL_HLEVEL: 3
 #+REVEAL_INIT_OPTIONS: transition:'zoom'
 #+REVEAL_PLUGINS: (highlight)
-#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr/> </p>
+#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr> </p>
 #+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@4.1.0/
 #+REVEAL_SLIDE_FOOTER:
 #+REVEAL_SLIDE_HEADER:
@@ -32,7 +32,7 @@
   - OpenSource Contributor, [[https://wiki.mozilla.org/User:Rzr][Mozilla Rep]] (IoT)
   - Involved in OS projects supported by industry:
     - Tizen (Intel), IoTivity (Samsung), [[https://www.ostc-eu.org/][OSTC-EU]]
-  - Contact: <https://purl.org/rzr/>
+  - Contact: <https://purl.org/rzr>
     - Currently *available for cooperation*
     - Link me from [[https://purl.org/rzr/social][Fediverse]] or [[https://twitter.com/RzrFreeFr/status/1308364944988155907][@RzrFreeFr]]
       - Presentations, Videos, Social
@@ -208,7 +208,7 @@
   
 * Resources and more:
   #+ATTR_REVEAL: :frag (fade-in)
-  - https://purl.org/rzr/
+  - https://purl.org/rzr
   - https://purl.org/rzr/weboftwins
   - https://purl.org/rzr/presentations
     
@@ -259,7 +259,7 @@
  - <https://purl.org/rzr/presentations>
 
 * More
-  - https://purl.org/rzr/
+  - https://purl.org/rzr
   - https://purl.org/rzr/presentations
   - https://purl.org/rzr/demo
   - https://purl.org/rzr/weboftwins
@@ -269,7 +269,6 @@
 * Related
 
   @@html:<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/w_c0wxJfBsw#iotivity-agl-demo-platform-20160222rzr" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>@@
-  
   
 * Playlist
 
