--- a/docs/sensors-webthings/index.org
+++ b/docs/sensors-webthings/index.org
@@ -1,5 +1,5 @@
 #+TITLE: Sensors & WebThings
-#+AUTHOR: Philippe Coval http://purl.org/rzr/ #SFK20
+#+AUTHOR: Philippe Coval <purl.org/rzr> #SFK20
 #+EMAIL: rzr@users.sf.net
 
 #+OPTIONS: num:nil, timestamp:nil, toc:nil, tags:nil, ^:nil, tag:nil, italic:nil
@@ -9,7 +9,7 @@
 #+REVEAL_HEAD_PREAMBLE: <meta name="description" content="Presentations slides">
 #+REVEAL_HLEVEL: 3
 #+REVEAL_INIT_OPTIONS: transition:'zoom'
-#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr/> </p>
+#+REVEAL_POSTAMBLE: <p> Created by Philippe Coval <https://purl.org/rzr> </p>
 #+REVEAL_ROOT: https://cdn.jsdelivr.net/gh/hakimel/reveal.js@4.1.0/
 #+REVEAL_SLIDE_FOOTER:
 #+REVEAL_SLIDE_HEADER:
@@ -32,7 +32,7 @@
   - OpenSource Contributor, [[https://wiki.mozilla.org/User:Rzr][Mozilla Rep]] (IoT)
   - Involved in industry's OSS:
     - Tizen (Intel), Yocto, IoTivity (Samsung)
-  - Contact: <https://purl.org/rzr/>
+  - Contact: <https://purl.org/rzr>
     - Presentations, Videos, Social...
     - Currently *available for cooperation*
     - Link me from [[https://purl.org/rzr/social][Fediverse]] or [[https://twitter.com/RzrFreeFr/status/1308364944988155907][@RzrFreeFr]]
@@ -670,7 +670,7 @@ curl -s  http://localhost:8888/properties
 [[https://purl.org/rzr/videos][📺]]
 
 * More
-  - https://purl.org/rzr/
+  - https://purl.org/rzr
   - https://purl.org/rzr/presentations
   - https://purl.org/rzr/demo
   - https://purl.org/rzr/weboftwins
